--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,32 @@
 .App {
   text-align: center;
 }
+
+.navbar a {
+  text-decoration: none;
+  color: white;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rebeccapurple;
+  height: 3rem;
+}
+
+.activeNav {
+  border-bottom: 2px solid white;
+}
+
+.goBack a {
+  text-decoration: none;
+  background-color: rebeccapurple;
+  color: white;
+  padding: 1rem 2rem;
+  border-radius: 30px;
+}
+
+.goBack {
+  margin-top: 2rem;
+}
